# ReactronProjetECEPREPAC2026

./: .gitignore  CMakeLists.txt  README.md  save.txt
libs/: detection_alignements.h  gestion_matrice.h  gestion_niveaux.h  rendering.h  sauvegarde.h  teste.h  type.h
src/: detection_alignements.c  gestion_matrice.c  gestion_niveaux.c  main.c  rendering.c  sauvegarde.c  teste.c
